# Fall_2018_Lectures

./: .gitignore  README.md
ControlEng/: 01_MATLAB_basics.md  02_control_app.md  02_plot.md  03_control_app.md  03_step_resp.md  03_system_response.md  04_laplace.md  05_root_locus.md  06_example_6-10.md  e02_plot_A.m  e02_plot_B.m  e02_plot_C.m  e03_step_resp_B.m  e03_sys_response_D.m  e05_rlocus_B.m  e05_rlocus_C.m  example_6_10.m  example_6_11.m  example_6_6.m
Robotics/: 00_LinuxInstallation.md  01_LinuxCommands.md  02_PackageManagement.md
Robotics/cpp/cpp03_oop_template/: main.cpp
Robotics/cpp/cpp04_oop_strategy/: main.cpp
Robotics/cpp/cpp06_build_system/: CMakeLists.txt  bar.cpp  bar.h  foo.cpp  foo.h  main.cpp
Robotics/cpp/cpp06_build_system/mythread/: mythread.cpp  mythread.h
Robotics/cpp/cpp07_cmake_library/: CMakeLists.txt
Robotics/cpp01_AddedSyntax/: cpp_functions.h  main.cpp
Robotics/cpp02_class/: classbasedcode.h  cpp02_class.pro  exampledog.cpp  exampledog.h  fruit.cpp  fruit.h  functionbasedcode.h  main.cpp  objectbasedcode.h
Robotics/cpp02_classbasic/: cpp02_classbasic.pro  exampledog.cpp  exampledog.h  main.cpp
Robotics/cpp03_whyuseclass/: functionbasedcode.h  main.cpp  objectbasedcode.h
Robotics/cpp04_objectoriented/: main.cpp
Robotics/cpp05_more_cpp/: conststatic.h  cpp05_more_cpp.pro  main.cpp  namespace.h  stlvector.h
Robotics/matlab/: measue_expect.m  rigid_transform.m  rigid_transform_eg.m
Robotics/ros/: create_ros_package.md  link_sources.sh  ros_setup.md
Robotics/ros-pkg-samples/self_drive/: CMakeLists.txt
Robotics/ros-pkg-samples/self_drive/include/self_drive/: tb3driver.h
Robotics/ros-pkg-samples/self_drive/src/: tb3driver.cpp
Robotics/ros/ros_tutorials_topic/: CMakeLists.txt  package.xml
Robotics/ros/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
